# fizzy-symphony

./: .gitignore  AGENTS.md  README.md  SPEC.md  WORKFLOW.example.md  config.example.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: _rcc-robot.yml  build-package.yml  python.yml  rcc-env-resolve.yml  rcc-fizzy-contract.yml  rcc-fizzy-parity.yml  rcc-prompt-card-smoke.yml  rcc-sqlite-workitem-flow.yml  rcc-workai-production-smoke.yml  uv.yml
docs/: architecture.md  codex-runner-strategy.md  deferred-scope.md  feature-parity-roadmap.md  fizzy-sdk-adapter.md  getting-started.md  live-operator-guide.md  onboarding-screen-directions.html  openai-symphony-alignment.md  popper-handoff-runbook.md  prior-art-basecamp-reference.md  prior-art-fizzy-popper.md  production-smoke-agent.md  rcc-workitems.md  roadmap.md  runtime-decision.md  spec-conformance-matrix.md  spec-coverage.md  user-guide.md
docs/v2/: cockpit-contract.md  decision.md  migration-inventory.md
examples/: github_project_board.py
prompts/: card-adapter-prompt.txt  program-lead.md  worker-agent.md
robot_tests/: fizzy_symphony.robot  resources.robot
robot_tests/env_resolve/: README.md  conda.yaml  robot.yaml  test.robot
src/: claims.js  cli-opener.js  client-factories.js  codex-app-server-transport.js  codex-cli-app-server-runner.js  completion.js  config.js  daemon.js  dashboard-model.js  dashboard.js  domain.js  errors.js  etag-cache.js  fizzy-client.js  fizzy-http-client.js  fizzy-normalize.js  fizzy-sdk-adapter.js  git-source-cache.js  instance-registry.js  instance.js  listener.js  logger.js  marker-comment.js  operator.js  orchestrator-state.js  polling.js  reconciler.js  recovery.js  router.js  run-registry.js  runner-contract.js  runner-health.js  scheduler.js  server.js  setup-wizard.js  setup.js  status-cli.js  status-discovery.js  status.js  terminal-renderer.js  (+4 more)
src/v2/: index.ts
test/: active-reconciliation.test.js  claims.test.js  cli-opener.test.js  cli-production-clients.test.js  codex-app-server-transport.test.js  codex-cli-app-server-runner.test.js  completion.test.js  config.test.js  daemon.test.js  dashboard.test.js  domain.test.js  etag-cache.test.js  fizzy-client.test.js  fizzy-sdk-adapter.test.js  git-source-cache.test.js  helpers.js  instance-registry.test.js  instance.test.js  listener.test.js  live-e2e-smoke.test.js  logger.test.js  orchestrator-state.test.js  polling.test.js  reconciler.test.js  recovery.test.js  router.test.js  run-registry.test.js  runner-contract.test.js  scheduler.test.js  server.test.js  setup-wizard.test.js  setup.test.js  spec-coverage.test.js  status-cli.test.js  status-discovery.test.js  status.test.js  terminal-renderer.test.js  terminal-ui.test.js  validation.test.js  workflow.test.js  (+1 more)
tests/: test_adapters_fizzy_cli.py  test_board_contracts.py  test_board_routing.py  test_cli.py  test_commands.py  test_durable_pipeline.py  test_live_fizzy.py  test_models.py  test_prompting.py  test_rcc_robot_files.py  test_reconciler.py  test_robocorp_adapter.py  test_runners.py  test_service_commands.py  test_symphony.py  test_workai_smoke_project.py  test_workitem_pipeline.py  test_workitem_queue.py  test_workspaces.py
(+103 files in other folders)
