[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fizzy-symphony"
version = "0.1.0"
description = "Fizzy-backed Symphony-style orchestration for Codex coding agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["fizzy", "codex", "orchestration", "agents", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# No third-party runtime dependencies in the initial scaffold.
dependencies = []

[project.optional-dependencies]
workitems = [
    "robocorp-workitems>=1.4.7; python_version >= '3.10'",
    "robocorp-adapters-custom>=0.1.4; python_version >= '3.10'",
]
codex-sdk = [
    "codex-app-server-sdk @ git+https://github.com/openai/codex.git@87bc72408c5ef08f8d21f2cdd00c55451c3be33f#subdirectory=sdk/python; python_version >= '3.10'",
]
robot = [
    "robocorp==3.1.1; python_version >= '3.10'",
    "robocorp-workitems>=1.4.7; python_version >= '3.10'",
    "robocorp-adapters-custom>=0.1.4; python_version >= '3.10'",
    "codex-app-server-sdk @ git+https://github.com/openai/codex.git@87bc72408c5ef08f8d21f2cdd00c55451c3be33f#subdirectory=sdk/python; python_version >= '3.10'",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
fizzy-symphony = "fizzy_symphony.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["fizzy_symphony"]

[tool.coverage.report]
show_missing = true
